update link of papers

--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
         </p>
 
         <p class="w3-center">
-          <a href="mailto:kqwang.optics@gmail.com">Email</a> |
-          <a href="https://github.com/kqwang">Github</a> |
-          <a href="https://scholar.google.com/citations?user=K_TBJDUAAAAJ&hl">Google Scholar</a> |
-          <a href="https://www.researchgate.net/profile/Kaiqiang-Wang-5">ResearchGate</a>
+          <a style="color: #447ec9" href="mailto:kqwang.optics@gmail.com">Email</a> |
+          <a style="color: #447ec9" href="https://github.com/kqwang">Github</a> |
+          <a style="color: #447ec9" href="https://scholar.google.com/citations?user=K_TBJDUAAAAJ&hl">Google Scholar</a> |
+          <a style="color: #447ec9" href="https://www.researchgate.net/profile/Kaiqiang-Wang-5">ResearchGate</a>
         </p>
         </tbody></table>
   </div>
@@ -119,10 +119,10 @@
 <!-- The News Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="news">
    <h2>News</h2>
-      <p><li> 04/2024, an <span style="color:FireBrick">invited talk</span> will be given at <a href="https://cd2024.piers.org/session.html?sid=S137">PIERS2024</a>.</li></p>
-      <p><li> 01/2024, a <span style="color:FireBrick">cover paper</span> was published on <a href="https://doi.org/10.1038/s41377-023-01340-x"><a href="https://doi.org/10.1038/s41377-023-01340-x">Light: Science and Applications</a>.</li></p>
-      <p><li> 03/2023, continue working in Hong Kong at <a href="https://isl.eee.hku.hk/">ISL@HKU</a>.</li></p>
-      <p><li> 07/2022, became Dr. Wang and started career at <a href="https://www.lambcuhk.org/">LAMB@CUHK</a>.</li></p>
+      <p><li> 04/2024, an <span style="color:FireBrick">invited talk</span> will be given at <a style="color: #447ec9" href="https://cd2024.piers.org/session.html?sid=S137">PIERS2024</a>.</li></p>
+      <p><li> 01/2024, a <span style="color:FireBrick">cover paper</span> was published on <a style="color: #447ec9" href="https://doi.org/10.1038/s41377-023-01340-x">Light: Science and Applications</a>.</li></p>
+      <p><li> 03/2023, continue working in Hong Kong at <a style="color: #447ec9" href="https://isl.eee.hku.hk/">ISL@HKU</a>.</li></p>
+      <p><li> 07/2022, became Dr. Wang and started career at <a style="color: #447ec9" href="https://www.lambcuhk.org/">LAMB@CUHK</a>.</li></p>
 
   </div>
 
@@ -139,166 +139,166 @@
       <ol>
 
         <p>
-        <li><a href="https://doi.org/10.1038/s41377-023-01340-x"><strong>On the use of deep learning for phase recovery</strong></a>
+        <li><strong>On the use of deep learning for phase recovery</strong>
         <br>
         <strong>K. Wang</strong>, L. Song, C. Wang, Z. Ren, G. Zhao, J. Dou, J. Di, G. Barbastathis, R. Zhou, J. Zhao, E. Lam
         <br>
-        <em>Light: Science & Applications</em> 2024 | <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">code</a> |  <span style="color:FireBrick">Cover Paper</span>
+        <em>Light: Science & Applications</em> 2024 | <a style="color: #447ec9" href="https://doi.org/10.1038/s41377-023-01340-x">paper</a> | <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">code</a> |  <span style="color:FireBrick">cover paper</span>
         <br>
-        <a style="color: #447ec9" href="https://phys.org/news/2024-01-deep-phase-recovery.html">Phys.org</a> | <a style="color: #447ec9" href="https://www.eurekalert.org/news-releases/1030138">Eurekalert!</a> | <a style="color: #447ec9" href="https://www.azooptics.com/News.aspx?newsID=28547">Azooptics</a> |<a style="color: #447ec9" href="https://mp.weixin.qq.com/s/SCPb9moq5thO8u6YH02lZQ">WeChatNews1</a> |<a style="color: #447ec9" href="https://mp.weixin.qq.com/s/WDpECC6F3Im74wV6PaEcUg">WeChatNews2</a>
+        <a style="color: #447ec9" href="https://phys.org/news/2024-01-deep-phase-recovery.html">Phys.org</a> | <a style="color: #447ec9" href="https://www.eurekalert.org/news-releases/1030138">Eurekalert!</a> | <a style="color: #447ec9" href="https://www.azooptics.com/News.aspx?newsID=28547">Azooptics</a> | <a style="color: #447ec9" href="https://mp.weixin.qq.com/s/SCPb9moq5thO8u6YH02lZQ">WeChatNews1</a> | <a style="color: #447ec9" href="https://mp.weixin.qq.com/s/WDpECC6F3Im74wV6PaEcUg">WeChatNews2</a>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.3389/fphy.2023.1190616">Real-time phase measurement of optical vortex via digital holography</a>
+        <li>Real-time phase measurement of optical vortex via digital holography
         <br>
         H. Qiu, X. Liu, <strong>K. Wang</strong>, J. Dou, J. Di, and Y. Qin
         <br>
-        <em>Frontiers in Physics</em> 2023
+        <em>Frontiers in Physics</em> 2023 | <a style="color: #447ec9" href="https://doi.org/10.3389/fphy.2023.1190616">paper</a>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1117/1.APN.1.1.014001"><strong>Deep learning spatial phase unwrapping: a comparative review</strong></a>
+        <li><strong>Deep learning spatial phase unwrapping: a comparative review</strong>
         <br>
         <strong>K. Wang</strong>, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Advanced Photonics Nexus</em> 2022 | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <a style="color: #447ec9" href="https://www.researching.cn/articles/OJc3ee5c3ec89a4a1a">video</a> | <span style="color:FireBrick">First article of this journal</span>
+        <em>Advanced Photonics Nexus</em> 2022 | <a style="color: #447ec9" href="https://doi.org/10.1117/1.APN.1.1.014001">paper</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <a style="color: #447ec9" href="https://www.researching.cn/articles/OJc3ee5c3ec89a4a1a">video</a> | <span style="color:FireBrick">first article of this journal</span>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.3389/fphy.2023.1190616">Light-field focusing and modulation through scattering media based on dual-polarization-encoded digital optical phase conjugation</a>
+        <li>Light-field focusing and modulation through scattering media based on dual-polarization-encoded digital optical phase conjugation
         <br>
         J. Dou, C. Ma, <strong>K. Wang</strong>, J. Di, J. Zhang, and J. Zhao
         <br>
-        <em>Optics Letters</em> 2022
+        <em>Optics Letters</em> 2022 | <a style="color: #447ec9" href="https://doi.org/10.3389/fphy.2023.1190616">paper</a>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1186/s43074-021-00030-4"><strong>Deep learning wavefront sensing and aberration correction in atmospheric turbulence</strong></a>
+        <li><strong>Deep learning wavefront sensing and aberration correction in atmospheric turbulence</strong>
         <br>
         <strong>K. Wang</strong>, M. Zhang, J. Tang, L. Wang, L. Hu, X. Wu, W. Li, J. Di, G. Liu, and J. Zhao
         <br>
-        <em>PhotoniX</em> 2021
+        <em>PhotoniX</em> 2021 | <a style="color: #447ec9" href="https://doi.org/10.1186/s43074-021-00030-4">paper</a>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1016/j.optlaseng.2021.106707">RestoreNet-Plus: Image restoration via deep learning in optical synthetic aperture imaging system</a>
+        <li>RestoreNet-Plus: Image restoration via deep learning in optical synthetic aperture imaging system
         <br>
         J. Tang, J. Wu, <strong>K. Wang</strong>, Z. Ren, X. Wu, L. Hu, J. Di, G. Liu, and J. Zhao
         <br>
-        <em>Optics and Lasers in Engineering</em> 2021
+        <em>Optics and Lasers in Engineering</em> 2021 | <a style="color: #447ec9" href="https://doi.org/10.1016/j.optlaseng.2021.106707">paper</a>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1016/j.optlaseng.2020.106463">RestoreNet: a deep learning framework for image restoration in optical synthetic aperture imaging system</a>
+        <li>RestoreNet: a deep learning framework for image restoration in optical synthetic aperture imaging system
         <br>
         J. Tang, <strong>K. Wang</strong>, Z. Ren, W. Zhang, X. Wu, J. Di, G. Liu, and J. Zhao
         <br>
-        <em>Optics and Lasers in Engineering</em> 2021
+        <em>Optics and Lasers in Engineering</em> 2021 | <a style="color: #447ec9" href="https://doi.org/10.1016/j.optlaseng.2020.106463">paper</a>
         </p>
 
         <p>
-        <li><a href="http://dx.doi.org/10.3788/LOP202158.1600001">Research Progress in the Applications of Convolutional Neural Networks in Optical Information Processing</a>
+        <li>Research Progress in the Applications of Convolutional Neural Networks in Optical Information Processing
         <br>
         J. Di, J. Tang, J. Wu, <strong>K. Wang</strong>, Z. Ren, M. Zhang, and J. Zhao
         <br>
-        <em>Laser & Optoelectronics Progress</em> 2021
+        <em>Laser & Optoelectronics Progress</em> 2021 | <a style="color: #447ec9" href="http://dx.doi.org/10.3788/LOP202158.1600001">paper</a>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.3389/fphy.2021.651313">Quantitative phase imaging using deep learning-based holographic microscope</a>
+        <li>Quantitative phase imaging using deep learning-based holographic microscope
         <br>
         J. Di, J. Wu, <strong>K. Wang</strong>, J. Tang, Y. Li, and J. Zhao
         <br>
-        <em>Frontiers in Physics</em> 2021
+        <em>Frontiers in Physics</em> 2021 | <a style="color: #447ec9" href="https://doi.org/10.3389/fphy.2021.651313">paper</a>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1364/AO.404276">Sparse-view imaging of a fiber internal structure in holographic diffraction tomography via a convolutional neural network</a>
+        <li>Sparse-view imaging of a fiber internal structure in holographic diffraction tomography via a convolutional neural network
         <br>
         J. Di, W. Han, S. Liu, <strong>K. Wang</strong>, J. Tang, and J. Zhao
         <br>
-        <em>Applied Optics</em> 2021
+        <em>Applied Optics</em> 2021 | <a style="color: #447ec9" href="https://doi.org/10.1364/AO.404276">paper</a>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1016/j.optlaseng.2020.106233"><strong>Transport of intensity equation from a single intensity image via deep learning</strong></a>
+        <li><strong>Transport of intensity equation from a single intensity image via deep learning</strong>
         <br>
         <strong>K. Wang</strong>, Jianglei Di, Ying Li, Zhenbo Ren, Qian Kemao, Jianlin Zhao
         <br>
-        <em>Optics and Lasers in Engineering</em> 2020
+        <em>Optics and Lasers in Engineering</em> 2020 | <a style="color: #447ec9" href="https://doi.org/10.1016/j.optlaseng.2020.106233">paper</a>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1364/OL.395445"><strong>Y4-Net: a deep learning solution to one-shot dual-wavelength digital holographic reconstruction</strong></a>
+        <li><strong>Y4-Net: a deep learning solution to one-shot dual-wavelength digital holographic reconstruction</strong>
         <br>
         <strong>K. Wang</strong>, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Optics Letters</em> 2020
+        <em>Optics Letters</em> 2020 | <a style="color: #447ec9" href="https://doi.org/10.1364/OL.395445">paper</a>
         </p>
 
 
         <p>
-        <li><a href="http://dx.doi.org/10.3788/AOS202040.2111001">A deep learning-based image restoration method in optical synthetic aperture imaging system</a>
+        <li>A deep learning-based image restoration method in optical synthetic aperture imaging system
         <br>
         J. Tang, <strong>K. Wang</strong>, W. Zhang, X. Wu, G. Liu, J. Di, and J. Zhao
         <br>
-        <em>Acta Optica Sinica</em> 2020
+        <em>Acta Optica Sinica</em> 2020 | <a style="color: #447ec9" href="http://dx.doi.org/10.3788/AOS202040.2111001">paper</a>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1364/OE.397029">Classification of cell morphology with quantitative phase microscopy and machine learning</a>
+        <li>Classification of cell morphology with quantitative phase microscopy and machine learning
         <br>
         Y. Li, J. Di, <strong>K. Wang</strong>, S. Wang, and J. Zhao
         <br>
-        <em>Optics Express</em> 2020
+        <em>Optics Express</em> 2020 | <a style="color: #447ec9" href="https://doi.org/10.1364/OE.397029">paper</a>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1364/OL.44.004765"><strong>Y-Net: a one-to-two deep learning framework for digital holographic reconstruction</strong></a>
+        <li><strong>Y-Net: a one-to-two deep learning framework for digital holographic reconstruction</strong>
         <br>
         <strong>K. Wang</strong>, J. Dou, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Optics Letters</em> 2019 | <span style="color:FireBrick">Editors' Pick </span>
+        <em>Optics Letters</em> 2019 | <a style="color: #447ec9" href="https://doi.org/10.1364/OL.44.004765">paper</a> | <span style="color:FireBrick">Editors' Pick </span>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1364/OE.27.015100"><strong>One-step robust deep learning phase unwrapping</strong></a>
+        <li><strong>One-step robust deep learning phase unwrapping</strong>
         <br>
         <strong>K. Wang</strong>, Y. Li, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Optics express</em> 2019 | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <span style="color:FireBrick">ESI Highly Cited Paper </span>
+        <em>Optics express</em> 2019 | <a style="color: #447ec9" href="https://doi.org/10.1364/OE.27.015100">paper</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <span style="color:FireBrick">ESI Highly Cited Paper </span>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1364/OE.26.000586">Quantitative phase microscopy for cellular dynamics based on transport of intensity equation</a>
+        <li>Quantitative phase microscopy for cellular dynamics based on transport of intensity equation
         <br>
         Y. Li, J. Di, C. Ma, J. Zhang, J. Zhong, <strong>K. Wang</strong>, T. Xi, and J. Zhao
         <br>
-        <em>Optics Express</em> 2018
+        <em>Optics Express</em> 2018 | <a style="color: #447ec9" href="https://doi.org/10.1364/OE.26.000586">paper</a>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1117/1.OE.57.2.024108">Quasicommon-path digital holographic microscopy with phase aberration compensation based on a long-working distance objective</a>
+        <li>Quasicommon-path digital holographic microscopy with phase aberration compensation based on a long-working distance objective
         <br>
         J. Di, <strong>K. Wang</strong>, J. Zhang, C. Ma, T. Xi, Y. Li, K. Wei, W. Qu, and J. Zhao
         <br>
-        <em>Optical Engineering</em> 2018
+        <em>Optical Engineering</em> 2018 | <a style="color: #447ec9" href="https://doi.org/10.1117/1.OE.57.2.024108">paper</a>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1109/JPHOT.2018.2839878">Quantitative and dynamic phase imaging of biological cells by the use of the digital holographic microscopy based on a beam displacer unit</a>
+        <li>Quantitative and dynamic phase imaging of biological cells by the use of the digital holographic microscopy based on a beam displacer unit
         <br>
         J. Di, Y. Li, <strong>K. Wang</strong>, and J. Zhao
         <br>
-        <em>IEEE Photonics Journal</em> 2018
+        <em>IEEE Photonics Journal</em> 2018 | <a style="color: #447ec9" href="https://doi.org/10.1109/JPHOT.2018.2839878">paper</a>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1117/1.OE.56.11.111712">Dual-wavelength common-path digital holographic microscopy for quantitative phase imaging of biological cells</a>
+        <li>Dual-wavelength common-path digital holographic microscopy for quantitative phase imaging of biological cells
         <br>
         J. Di, Y. Song, T. Xi, J. Zhang, Y. Li, C. Ma, <strong>K. Wang</strong>, and J. Zhao
         <br>
-        <em>Optical Engineering</em> 2017
+        <em>Optical Engineering</em> 2017 | <a style="color: #447ec9" href="https://doi.org/10.1117/1.OE.56.11.111712">paper</a>
         </p>
 
       </ol>
@@ -306,43 +306,43 @@
       <h4> Conference Proceedings: </h4>
       <ol>
         <p>
-        <li><a href="https://doi.org/10.1117/12.2576299">RestoreNet: a deep learning framework for image restoration in optical multi-aperture imaging system</a>
+        <li>RestoreNet: a deep learning framework for image restoration in optical multi-aperture imaging system
         <br>
         J. Tang, <strong>K. Wang</strong>, X. Wu, J. Di, G. Liu, and J. Zhao
         <br>
-        in Optics Frontier Online 2020: Optics Imaging and Display (SPIE, 2020), 11571, pp. 19–25.
+        in Optics Frontier Online 2020: Optics Imaging and Display (SPIE, 2020), 11571, pp. 19–25. | <a style="color: #447ec9" href="https://doi.org/10.1117/12.2576299">paper</a>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1117/12.2573707">Deep learning in computational imaging></a>
+        <li>Deep learning in computational imaging>
         <br>
         J. Di, <strong>K. Wang</strong>, and J. Zhao
         <br>
-        in Holography, Diffractive Optics, and Applications X (SPIE, 2020), 11551, p. 1155107.
+        in Holography, Diffractive Optics, and Applications X (SPIE, 2020), 11551, p. 1155107. | <a style="color: #447ec9" href="https://doi.org/10.1117/12.2573707">paper</a>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1364/DH.2020.HTu4B.2">Deep learning-based holographic reconstruction in digital holography</a>
+        <li>Deep learning-based holographic reconstruction in digital holography
         <br>
         J. Di, <strong>K. Wang</strong>, Y. Li, and J. Zhao
         <br>
-        in Digital Holography and Three-Dimensional Imaging (Optica Publishing Group, 2020), pp. HTu4B-2.
+        in Digital Holography and Three-Dimensional Imaging (Optica Publishing Group, 2020), pp. HTu4B-2. | <a style="color: #447ec9" href="https://doi.org/10.1364/DH.2020.HTu4B.2">paper</a>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1117/12.2289324">Common-path digital holographic microscopy based on a beam displacer unit</a>
+        <li>Common-path digital holographic microscopy based on a beam displacer unit
         <br>
         J. Di, J. Zhang, Y. Song, <strong>K. Wang</strong>, K. Wei, and J. Zhao
         <br>
-        in Quantitative Phase Imaging IV (SPIE, 2018), 10503, pp. 208–211.
+        in Quantitative Phase Imaging IV (SPIE, 2018), 10503, pp. 208–211. | <a style="color: #447ec9" href="https://doi.org/10.1117/12.2289324">paper</a>
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1117/12.2270774">Improvement of phase measurement accuracy and stability in dual-wavelength common-path digital holographic microscopy</a>
+        <li>Improvement of phase measurement accuracy and stability in dual-wavelength common-path digital holographic microscopy
         <br>
         J. Di, Y. Song, T. Xi, J. Zhang, Y. Li, C. Ma, <strong>K. Wang</strong>, and J. Zhao
         <br>
-        in Fifth International Conference on Optical and Photonics Engineering (SPIE, 2017), 10449, pp. 349–354.
+        in Fifth International Conference on Optical and Photonics Engineering (SPIE, 2017), 10449, pp. 349–354. | <a style="color: #447ec9" href="https://doi.org/10.1117/12.2270774">paper</a>
         </p>
 
       </ol>
