update the color of resource.

--- a/index.html
+++ b/index.html
@@ -408,11 +408,11 @@ of America A, Optics Continuum.
       <p>
         <ol>
           <p>
-          <a href="https://github.com/kqwang/phase-recovery">Resource for phase recovery</a>.
+          <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">Resource for phase recovery</a>.
           </p>
 
           <p>
-          <a href="https://github.com/kqwang/computational-imaging">Resource for computational imaging</a>.
+          <a style="color: #447ec9" href="https://github.com/kqwang/computational-imaging">Resource for computational imaging</a>.
           </p>
 
         </ol>
