--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <!--      <img style="width: 80%;max-width: 80px" alt="profile photo" src="images/kaiqiang.png">-->
 <!--      <h1>Kaiqiang Wang</h1>-->
 <!--        <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">-->
-          <strong>Kaiqiang Wang</strong> is now a postdoctoral fellow in the Lab of <a href="https://www.eee.hku.hk/~elam/">Prof. Edmund Y. Lam</a> at the University of Hong Kong.
+          <a href="https://kqwang.github.io/">Kaiqiang Wang</a> is now a postdoctoral fellow in the Lab of <a href="https://www.eee.hku.hk/~elam/">Prof. Edmund Y. Lam</a> at the University of Hong Kong.
           Before that, he did postdoctoral research in the Lab of <a href="https://www.lambcuhk.org/people/pi">Prof. Renjie Zhou</a> at the Chinese University of Hong Kong.
           He received his PhD at Northwestern Polytechnical University under the supervision of <a href="https://scholar.google.com/citations?user=i0cHhBQAAAAJ">Prof. Jianlin Zhao</a>, <a href="https://teacher.gdut.edu.cn/jiangleidi">Prof. Jianglei Di</a>, and <a href="https://www3.ntu.edu.sg/home/mkmqian/">Prof. Kemao Qian</a>.
           <br><br>He is an enthusiast for <strong>computational imaging</strong> and <strong>deep learning</strong>.
@@ -141,7 +141,7 @@
         <p>
         <li><strong>On the use of deep learning for phase recovery</strong>
         <br>
-        <strong>K. Wang</strong>, L. Song, C. Wang, Z. Ren, G. Zhao, J. Dou, J. Di, G. Barbastathis, R. Zhou, J. Zhao, E. Lam
+        <a href="https://kqwang.github.io/">K. Wang</a>, L. Song, C. Wang, Z. Ren, G. Zhao, J. Dou, J. Di, G. Barbastathis, R. Zhou, J. Zhao, E. Lam
         <br>
         <em>Light: Science & Applications</em> 2024 | <a style="color: #447ec9" href="https://doi.org/10.1038/s41377-023-01340-x">paper</a> | <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">code</a> |  <span style="color:FireBrick">cover paper</span>
         <br>
@@ -151,7 +151,7 @@
         <p>
         <li>Real-time phase measurement of optical vortex via digital holography
         <br>
-        H. Qiu, X. Liu, <strong>K. Wang</strong>, J. Dou, J. Di, and Y. Qin
+        H. Qiu, X. Liu, <a href="https://kqwang.github.io/">K. Wang</a>, J. Dou, J. Di, and Y. Qin
         <br>
         <em>Frontiers in Physics</em> 2023 | <a style="color: #447ec9" href="https://doi.org/10.3389/fphy.2023.1190616">paper</a>
         </p>
@@ -159,7 +159,7 @@
         <p>
         <li><strong>Deep learning spatial phase unwrapping: a comparative review</strong>
         <br>
-        <strong>K. Wang</strong>, Q. Kemao, J. Di, and J. Zhao
+        <a href="https://kqwang.github.io/">K. Wang</a>, Q. Kemao, J. Di, and J. Zhao
         <br>
         <em>Advanced Photonics Nexus</em> 2022 | <a style="color: #447ec9" href="https://doi.org/10.1117/1.APN.1.1.014001">paper</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <a style="color: #447ec9" href="https://www.researching.cn/articles/OJc3ee5c3ec89a4a1a">video</a> | <span style="color:FireBrick">first article of this journal</span>
         </p>
@@ -167,7 +167,7 @@
         <p>
         <li>Light-field focusing and modulation through scattering media based on dual-polarization-encoded digital optical phase conjugation
         <br>
-        J. Dou, C. Ma, <strong>K. Wang</strong>, J. Di, J. Zhang, and J. Zhao
+        J. Dou, C. Ma, <a href="https://kqwang.github.io/">K. Wang</a>, J. Di, J. Zhang, and J. Zhao
         <br>
         <em>Optics Letters</em> 2022 | <a style="color: #447ec9" href="https://doi.org/10.3389/fphy.2023.1190616">paper</a>
         </p>
@@ -175,7 +175,7 @@
         <p>
         <li><strong>Deep learning wavefront sensing and aberration correction in atmospheric turbulence</strong>
         <br>
-        <strong>K. Wang</strong>, M. Zhang, J. Tang, L. Wang, L. Hu, X. Wu, W. Li, J. Di, G. Liu, and J. Zhao
+        <a href="https://kqwang.github.io/">K. Wang</a>, M. Zhang, J. Tang, L. Wang, L. Hu, X. Wu, W. Li, J. Di, G. Liu, and J. Zhao
         <br>
         <em>PhotoniX</em> 2021 | <a style="color: #447ec9" href="https://doi.org/10.1186/s43074-021-00030-4">paper</a>
         </p>
@@ -183,7 +183,7 @@
         <p>
         <li>RestoreNet-Plus: Image restoration via deep learning in optical synthetic aperture imaging system
         <br>
-        J. Tang, J. Wu, <strong>K. Wang</strong>, Z. Ren, X. Wu, L. Hu, J. Di, G. Liu, and J. Zhao
+        J. Tang, J. Wu, <a href="https://kqwang.github.io/">K. Wang</a>, Z. Ren, X. Wu, L. Hu, J. Di, G. Liu, and J. Zhao
         <br>
         <em>Optics and Lasers in Engineering</em> 2021 | <a style="color: #447ec9" href="https://doi.org/10.1016/j.optlaseng.2021.106707">paper</a>
         </p>
@@ -191,7 +191,7 @@
         <p>
         <li>RestoreNet: a deep learning framework for image restoration in optical synthetic aperture imaging system
         <br>
-        J. Tang, <strong>K. Wang</strong>, Z. Ren, W. Zhang, X. Wu, J. Di, G. Liu, and J. Zhao
+        J. Tang, <a href="https://kqwang.github.io/">K. Wang</a>, Z. Ren, W. Zhang, X. Wu, J. Di, G. Liu, and J. Zhao
         <br>
         <em>Optics and Lasers in Engineering</em> 2021 | <a style="color: #447ec9" href="https://doi.org/10.1016/j.optlaseng.2020.106463">paper</a>
         </p>
@@ -199,7 +199,7 @@
         <p>
         <li>Research Progress in the Applications of Convolutional Neural Networks in Optical Information Processing
         <br>
-        J. Di, J. Tang, J. Wu, <strong>K. Wang</strong>, Z. Ren, M. Zhang, and J. Zhao
+        J. Di, J. Tang, J. Wu, <a href="https://kqwang.github.io/">K. Wang</a>, Z. Ren, M. Zhang, and J. Zhao
         <br>
         <em>Laser & Optoelectronics Progress</em> 2021 | <a style="color: #447ec9" href="http://dx.doi.org/10.3788/LOP202158.1600001">paper</a>
         </p>
@@ -207,7 +207,7 @@
         <p>
         <li>Quantitative phase imaging using deep learning-based holographic microscope
         <br>
-        J. Di, J. Wu, <strong>K. Wang</strong>, J. Tang, Y. Li, and J. Zhao
+        J. Di, J. Wu, <a href="https://kqwang.github.io/">K. Wang</a>, J. Tang, Y. Li, and J. Zhao
         <br>
         <em>Frontiers in Physics</em> 2021 | <a style="color: #447ec9" href="https://doi.org/10.3389/fphy.2021.651313">paper</a>
         </p>
@@ -215,7 +215,7 @@
         <p>
         <li>Sparse-view imaging of a fiber internal structure in holographic diffraction tomography via a convolutional neural network
         <br>
-        J. Di, W. Han, S. Liu, <strong>K. Wang</strong>, J. Tang, and J. Zhao
+        J. Di, W. Han, S. Liu, <a href="https://kqwang.github.io/">K. Wang</a>, J. Tang, and J. Zhao
         <br>
         <em>Applied Optics</em> 2021 | <a style="color: #447ec9" href="https://doi.org/10.1364/AO.404276">paper</a>
         </p>
@@ -223,7 +223,7 @@
         <p>
         <li><strong>Transport of intensity equation from a single intensity image via deep learning</strong>
         <br>
-        <strong>K. Wang</strong>, Jianglei Di, Ying Li, Zhenbo Ren, Qian Kemao, Jianlin Zhao
+        <a href="https://kqwang.github.io/">K. Wang</a>, Jianglei Di, Ying Li, Zhenbo Ren, Qian Kemao, Jianlin Zhao
         <br>
         <em>Optics and Lasers in Engineering</em> 2020 | <a style="color: #447ec9" href="https://doi.org/10.1016/j.optlaseng.2020.106233">paper</a>
         </p>
@@ -231,7 +231,7 @@
         <p>
         <li><strong>Y4-Net: a deep learning solution to one-shot dual-wavelength digital holographic reconstruction</strong>
         <br>
-        <strong>K. Wang</strong>, Q. Kemao, J. Di, and J. Zhao
+        <a href="https://kqwang.github.io/">K. Wang</a>, Q. Kemao, J. Di, and J. Zhao
         <br>
         <em>Optics Letters</em> 2020 | <a style="color: #447ec9" href="https://doi.org/10.1364/OL.395445">paper</a>
         </p>
@@ -240,7 +240,7 @@
         <p>
         <li>A deep learning-based image restoration method in optical synthetic aperture imaging system
         <br>
-        J. Tang, <strong>K. Wang</strong>, W. Zhang, X. Wu, G. Liu, J. Di, and J. Zhao
+        J. Tang, <a href="https://kqwang.github.io/">K. Wang</a>, W. Zhang, X. Wu, G. Liu, J. Di, and J. Zhao
         <br>
         <em>Acta Optica Sinica</em> 2020 | <a style="color: #447ec9" href="http://dx.doi.org/10.3788/AOS202040.2111001">paper</a>
         </p>
@@ -248,7 +248,7 @@
         <p>
         <li>Classification of cell morphology with quantitative phase microscopy and machine learning
         <br>
-        Y. Li, J. Di, <strong>K. Wang</strong>, S. Wang, and J. Zhao
+        Y. Li, J. Di, <a href="https://kqwang.github.io/">K. Wang</a>, S. Wang, and J. Zhao
         <br>
         <em>Optics Express</em> 2020 | <a style="color: #447ec9" href="https://doi.org/10.1364/OE.397029">paper</a>
         </p>
@@ -256,7 +256,7 @@
         <p>
         <li><strong>Y-Net: a one-to-two deep learning framework for digital holographic reconstruction</strong>
         <br>
-        <strong>K. Wang</strong>, J. Dou, Q. Kemao, J. Di, and J. Zhao
+        <a href="https://kqwang.github.io/">K. Wang</a>, J. Dou, Q. Kemao, J. Di, and J. Zhao
         <br>
         <em>Optics Letters</em> 2019 | <a style="color: #447ec9" href="https://doi.org/10.1364/OL.44.004765">paper</a> | <span style="color:FireBrick">Editors' Pick </span>
         </p>
@@ -264,7 +264,7 @@
         <p>
         <li><strong>One-step robust deep learning phase unwrapping</strong>
         <br>
-        <strong>K. Wang</strong>, Y. Li, Q. Kemao, J. Di, and J. Zhao
+        <a href="https://kqwang.github.io/">K. Wang</a>, Y. Li, Q. Kemao, J. Di, and J. Zhao
         <br>
         <em>Optics express</em> 2019 | <a style="color: #447ec9" href="https://doi.org/10.1364/OE.27.015100">paper</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <span style="color:FireBrick">ESI Highly Cited Paper </span>
         </p>
@@ -272,7 +272,7 @@
         <p>
         <li>Quantitative phase microscopy for cellular dynamics based on transport of intensity equation
         <br>
-        Y. Li, J. Di, C. Ma, J. Zhang, J. Zhong, <strong>K. Wang</strong>, T. Xi, and J. Zhao
+        Y. Li, J. Di, C. Ma, J. Zhang, J. Zhong, <a href="https://kqwang.github.io/">K. Wang</a>, T. Xi, and J. Zhao
         <br>
         <em>Optics Express</em> 2018 | <a style="color: #447ec9" href="https://doi.org/10.1364/OE.26.000586">paper</a>
         </p>
@@ -280,7 +280,7 @@
         <p>
         <li>Quasicommon-path digital holographic microscopy with phase aberration compensation based on a long-working distance objective
         <br>
-        J. Di, <strong>K. Wang</strong>, J. Zhang, C. Ma, T. Xi, Y. Li, K. Wei, W. Qu, and J. Zhao
+        J. Di, <a href="https://kqwang.github.io/">K. Wang</a>, J. Zhang, C. Ma, T. Xi, Y. Li, K. Wei, W. Qu, and J. Zhao
         <br>
         <em>Optical Engineering</em> 2018 | <a style="color: #447ec9" href="https://doi.org/10.1117/1.OE.57.2.024108">paper</a>
         </p>
@@ -288,7 +288,7 @@
         <p>
         <li>Quantitative and dynamic phase imaging of biological cells by the use of the digital holographic microscopy based on a beam displacer unit
         <br>
-        J. Di, Y. Li, <strong>K. Wang</strong>, and J. Zhao
+        J. Di, Y. Li, <a href="https://kqwang.github.io/">K. Wang</a>, and J. Zhao
         <br>
         <em>IEEE Photonics Journal</em> 2018 | <a style="color: #447ec9" href="https://doi.org/10.1109/JPHOT.2018.2839878">paper</a>
         </p>
@@ -296,7 +296,7 @@
         <p>
         <li>Dual-wavelength common-path digital holographic microscopy for quantitative phase imaging of biological cells
         <br>
-        J. Di, Y. Song, T. Xi, J. Zhang, Y. Li, C. Ma, <strong>K. Wang</strong>, and J. Zhao
+        J. Di, Y. Song, T. Xi, J. Zhang, Y. Li, C. Ma, <a href="https://kqwang.github.io/">K. Wang</a>, and J. Zhao
         <br>
         <em>Optical Engineering</em> 2017 | <a style="color: #447ec9" href="https://doi.org/10.1117/1.OE.56.11.111712">paper</a>
         </p>
@@ -308,7 +308,7 @@
         <p>
         <li>RestoreNet: a deep learning framework for image restoration in optical multi-aperture imaging system
         <br>
-        J. Tang, <strong>K. Wang</strong>, X. Wu, J. Di, G. Liu, and J. Zhao
+        J. Tang, <a href="https://kqwang.github.io/">K. Wang</a>, X. Wu, J. Di, G. Liu, and J. Zhao
         <br>
         in Optics Frontier Online 2020: Optics Imaging and Display (SPIE, 2020), 11571, pp. 19–25. | <a style="color: #447ec9" href="https://doi.org/10.1117/12.2576299">paper</a>
         </p>
@@ -316,7 +316,7 @@
         <p>
         <li>Deep learning in computational imaging>
         <br>
-        J. Di, <strong>K. Wang</strong>, and J. Zhao
+        J. Di, <a href="https://kqwang.github.io/">K. Wang</a>, and J. Zhao
         <br>
         in Holography, Diffractive Optics, and Applications X (SPIE, 2020), 11551, p. 1155107. | <a style="color: #447ec9" href="https://doi.org/10.1117/12.2573707">paper</a>
         </p>
@@ -324,7 +324,7 @@
         <p>
         <li>Deep learning-based holographic reconstruction in digital holography
         <br>
-        J. Di, <strong>K. Wang</strong>, Y. Li, and J. Zhao
+        J. Di, <a href="https://kqwang.github.io/">K. Wang</a>, Y. Li, and J. Zhao
         <br>
         in Digital Holography and Three-Dimensional Imaging (Optica Publishing Group, 2020), pp. HTu4B-2. | <a style="color: #447ec9" href="https://doi.org/10.1364/DH.2020.HTu4B.2">paper</a>
         </p>
@@ -332,7 +332,7 @@
         <p>
         <li>Common-path digital holographic microscopy based on a beam displacer unit
         <br>
-        J. Di, J. Zhang, Y. Song, <strong>K. Wang</strong>, K. Wei, and J. Zhao
+        J. Di, J. Zhang, Y. Song, <a href="https://kqwang.github.io/">K. Wang</a>, K. Wei, and J. Zhao
         <br>
         in Quantitative Phase Imaging IV (SPIE, 2018), 10503, pp. 208–211. | <a style="color: #447ec9" href="https://doi.org/10.1117/12.2289324">paper</a>
         </p>
@@ -340,7 +340,7 @@
         <p>
         <li>Improvement of phase measurement accuracy and stability in dual-wavelength common-path digital holographic microscopy
         <br>
-        J. Di, Y. Song, T. Xi, J. Zhang, Y. Li, C. Ma, <strong>K. Wang</strong>, and J. Zhao
+        J. Di, Y. Song, T. Xi, J. Zhang, Y. Li, C. Ma, <a href="https://kqwang.github.io/">K. Wang</a>, and J. Zhao
         <br>
         in Fifth International Conference on Optical and Photonics Engineering (SPIE, 2017), 10449, pp. 349–354. | <a style="color: #447ec9" href="https://doi.org/10.1117/12.2270774">paper</a>
         </p>
